prevented offscreen elements from taking space

--- a/src/_config.scss
+++ b/src/_config.scss
@@ -104,13 +104,18 @@ a {
     @content;
   }
 }
+@mixin tiny {
+  @media screen and (max-width: 300px) {
+    @content;
+  }
+}
 @mixin mobile {
   @media screen and (max-width: 480px) {
     @content;
   }
 }
 @mixin tablet {
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 860px) {
     @content;
   }
 }
