--- a/src/app/components/Hero/Hero.module.scss
+++ b/src/app/components/Hero/Hero.module.scss
@@ -3,7 +3,7 @@
 .hero {
   width: 100vw;
   position: relative;
-  height: 70vh;
+  height: auto;
 }
 .txt {
   @include container;
@@ -12,15 +12,26 @@
   width: 100vw;
   height: 100%;
   position: relative;
-  filter: blur(3px);
-  filter: brightness(60%);
+  filter: brightness(55%);
 }
 .caption {
   position: absolute;
   right: 2rem;
+  width: 100%;
   bottom: 2rem;
   color: $clr-white;
-  opacity: 0.6;
+  opacity: 0.3;
+  text-align: right;
+  @include tablet {
+    font-size: 1.2rem;
+    right: 1rem;
+    top: 1rem;
+  }
+  @include mobile {
+    font-size: 1rem;
+    right: 0.8rem;
+    top: 0.5rem;
+  }
 }
 .quote {
   position: absolute;
@@ -30,4 +41,13 @@
   left: 50%;
   color: $clr-white;
   transform: translate(-50%, -50%);
+  @include tablet {
+    font-size: 4.7rem;
+  }
+  @include mobile {
+    font-size: 2.5rem;
+  }
+  @include tiny {
+    font-size: 1.5rem;
+  }
 }
